# BaiduPanShareManagement

./: .gitignore  AGENTS.md  README.md  pyproject.toml  run.py  start.ps1  start.sh  status.ps1  status.sh  stop.ps1  stop.sh  生成Jenkinsfile的提示词.md  项目提示词.md
JenkinsConfig/: Jenkinsfile
config/: app.json
docs/: AGENTS合规审计.md  设计说明书.md  需求规格说明书.md
src/JenkinsConfig/: Jenkinsfile
src/app/bdpan/: __init__.py  auth.py  cli.py  client.py  config.py  database.py  models.py  storage.py  sync.py  web.py  web_tasks.py
src/app/bdpan/web_static/: index.html
src/app/bdpan/web_static/assets/: index-BCfsFaY8.css  index-BvK54zuJ.js  index-DI8aEKAH.js  index-NdywicDR.css
src/app/frontend/: index.html  package-lock.json  package.json  vite.config.js
src/app/frontend/src/: App.vue  style.css
tests/: test_client.py  test_sync.py  test_web.py
